--- a/mouse-events/index.html
+++ b/mouse-events/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
-</head>
-<body>
-    <div class="main-container">
-        <div class="images-container">
-            <div class="image image-1">
-                <img class="first-image" src="https://assets.website-files.com/617fa48948c7ab24b715140e/6183bce7320d030e82c15028_hero_person-1.webp" />
-            </div>
-            <div class="image image-2">
-                <img class="second-image" src="https://assets.website-files.com/617fa48948c7ab24b715140e/6183bce3e584104be2e330e0_hero_person-2.webp" />
-            </div>
-            <div class="image image-3">
-                <img class="third-image" src="https://assets.website-files.com/617fa48948c7ab24b715140e/6183bb01e5841050e8e31f3b_hero_person-3.webp" />
-            </div>
+  </head>
+  <body>
+    <div class="mainCntnr">
+      <div class="cardsCntnr">
+        <div class="imgCntnr cntnr1">
+          <img src="https://raw.githubusercontent.com/AmilMusaevi/HomeWorks/main/jsTask/mouseEventsTask/photos/person1.webp" alt="" />
         </div>
+        <div class="imgCntnr cntnr2 active">
+          <img src="https://raw.githubusercontent.com/AmilMusaevi/HomeWorks/main/jsTask/mouseEventsTask/photos/person2.webp" alt="" />
+        </div>
+        <div class="imgCntnr cntnr3 active">
+          <img src="https://raw.githubusercontent.com/AmilMusaevi/HomeWorks/main/jsTask/mouseEventsTask/photos/person3.webp" alt="" />
+        </div>
+      </div>
     </div>
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
